fix layout issues

--- a/src/style/layout/_blog.scss
+++ b/src/style/layout/_blog.scss
@@ -1,3 +1,6 @@
 .blog {
-   text-align: center;
+   text-align: start;
+   padding-left: 20%;
+   padding-right: 20%;
+   padding-top: 20px;
 }
